--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>ar.com.edu.unlam</groupId>
-  <artifactId>Herramienta-de-testing</artifactId>
+  <artifactId>HerramientaDeTesting</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
@@ -19,6 +19,11 @@
 		<groupId>org.apache.commons</groupId>
 		<artifactId>commons-lang3</artifactId>
 		<version>3.4</version>
+	</dependency>
+	<dependency>
+		<groupId>com.github.javaparser</groupId>
+		<artifactId>javaparser-core</artifactId>
+		<version>2.2.2</version>
 	</dependency>
   </dependencies>
   
