--- a/.classpath
+++ b/.classpath
@@ -6,10 +6,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
-		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="lib" path="src/commons-lang3-3.4.jar"/>
+	<classpathentry kind="lib" path="src/javaparser-core-2.2.2.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
